  Fixed.
- Fixed detection of building a shared library on Cray in the instrumenter.
- Fixed failed OpenMP detection on K if the -Kopenmp flag was combined
  with other flags in a comme separated list.
- Fixed errorneous calculation and presentation of task migration metrics.
- The GCC instrumentation plug-in can now also be built if the used GCC
  installation does not provide a `gmp.h` header.

------------------- Released version 1.4 -----------------------------

Major features:

- If the used OTF2 version supports SIONlib, then it is now possible to
  write also traces with SIONlib that include an arbitrary number of
  threads, asynchronous metric plugins, and accelerator (CUDA/OpenCL/...)
  streams.
- Basic support for OpenCL instrumentation.
- For GCC versions 4.5 till 4.9 a new function instrumentation is available
  via the plug-in interface of the compiler. This new function instrumentation
  greatly improves the measurement performance. It also provides compile-time
  instrumentation filtering using the same filter file format as the run-time
  filtering.
  On some systems the GCC plug-in dev package needs to be installed, in
  order to provide the necessary header files.
- Score-P now ships with the entire Cube package included. I.e., a
  Cube installation is no longer a hard requirement when building
  Score-P from a tarball (this requirement was introduced with Score-P
  1.2 and was needed to build scorep-score, a tool to score profile
  experiments to prepare a filter for subsequent trace experiments). A
  Cube installation will be favored if cube-config is in PATH (as with
  OTF2 and OPARI2 installations). To use the internal Cube even if a
  cube-config is in PATH, specify --without-cube on the configure
  command-line. To prevent building the Cube GUI, add --without-gui to
  the configure command-line.

Features and improvements:

- Support for pthread_exit and pthread_cancel was added.
- Added support for task migration in the profiling system.