@@ -56,13 +56,14 @@ check-serial: check-run-serial
 check-omp:    check-run-omp
 
 # On MIC, scorep-config is also installed to $pkglibexecdir; rename to
-# # scorep-config-mic afterwards
+# scorep-config-mic afterwards
 if PLATFORM_MIC
 
 install-exec-hook:
-	mv $(pkglibexecdir)/scorep-config $(pkglibexecdir)/scorep-config-mic
+	mv $(DESTDIR)$(pkglibexecdir)/scorep-config \
+	   $(DESTDIR)$(pkglibexecdir)/scorep-config-mic
 
 uninstall-hook:
-	rm $(pkglibexecdir)/scorep-config-mic
+	rm $(DESTDIR)$(pkglibexecdir)/scorep-config-mic
 
 endif PLATFORM_MIC
